--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="styles/styles.css"
-    <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="styles/styles.css">
+    <title>maquetacion 1</title>
+    <link rel="icon" type="image/x-icon" href="img/logo.jpeg">
 </head>
 <body>
     
