--- a/index.html
+++ b/index.html
@@ -9,6 +9,17 @@
     <link rel="icon" type="image/x-icon" href="img/logo.jpeg">
 </head>
 <body>
-    
+    <!--Inicio de la cabecera-->
+    <header class="header">
+        <div class="logotipo">
+            <img src="img/logo.jpeg" alt="logotipo">
+        </div>    
+            <h1>
+                <a href="index.html">
+                    Factor industria colombiana
+                </a>    
+            </h1>
+    </header>
+    <!--fin de la cabecera-->
 </body>
 </html>
