menu de navegacion y menus desplegables

--- a/index.html
+++ b/index.html
@@ -21,5 +21,43 @@
             </h1>
     </header>
     <!--fin de la cabecera-->
+    <!--menú de navegación-->
+    <nav class="nav">
+        <ul>
+            <li><a href="index.html">inicio</a></li>
+            <li><a href="#">contenido</a></li>
+            <li><a href="#">requerimientos</a></li>
+            <li><a href="#">lenguajes</a>
+                <ul>
+                    <li><a href="#">HTML</a></li>
+                    <li><a href="#">CSS</a></li>
+                </ul>
+            </li>
+            <li>
+                <a href="#">frameworks</a>
+                <ul>
+                    <li><a href="#">SASS</a></li>
+                    <li><a href="#">LESS</a></li>
+                    <li><a href="#">Bootstrap 4</a></li>
+                </ul>
+            </li>
+            <li>
+                <a href="#">proyectos</a>
+            </li>
+            <li>
+                <a href="#">el instructor</a>
+            </li>
+            <li>
+                <a href="#">reseña</a>
+            </li>
+            <li>
+                <a href="#">blog</a>
+            </li>
+            <li>
+                <a href="#">contacto</a>
+            </li>
+        </ul>
+    </nav>
+    <!--fin del menú de navegación-->
 </body>
 </html>
